# easysocks5

./: Dockerfile  LICENSE  README.md  pyproject.toml  setup.py
easysocks5/: __init__.py  remote.py  server.py  socks5.py
socks5/: server.py  socks5.py
tests/: test_socks5.py
