[tool.poetry]
name = "easysocks5"
version = "0.0.5"
description = "easysocks5 is a simple SOCKS5 server implementation with AsyncIO"
authors = ["Frank Chang <frank@csie.io>"]
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Internet",
    "Topic :: System :: Networking",
]
keywords = ["socks", "socks5", "asyncio"]
repository = "https://github.com/frankurcrazy/easysocks5"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
isort = "^5.5.3"
black = "^20.8b1"
coverage = "^5.3"

[tool.isort]
profile = "black"
force_single_line = true
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
src_paths = ["easysocks5", "tests"]
skip_glob = ["*/setup.py"]
filter_files = true
known_first_party = "easysocks5"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''

[tool.coverage.run]
source = ["easysocks5"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

